[Update] Command Argument and refactoring another things

--- a/ava.1
+++ b/ava.1
@@ -132,5 +132,5 @@ the best possible user experience. if you encounter any issues or have any
 questions or concerns about Ava, be sure to contact the support team for
 assistance.
 .SH BUGS
-Send all bug report to margarethasaputri144@gmail.com
+Send all bug report to fajar.nur.h@pm.me
 
